
+ Implemented RubyEnumerable#lazy

+ Added freeze() & frozen?() to RubyArray & RubyHash

* Checked 'false' in RubyEnumerable#all? & RubyEnumerable#any?

+ Added RubyArray#collectǃ & RubyArray#mapǃ


Version 1.5.1

* Changed LazyRubyEnumerator to RubyLazyEnumerator


Version 1.5.2

- Removed RubyEnumerable#sort(Comparator comp) to adapt new Java8 List Interface

* Fixed the bug of RubyIO UTF reading & writing

* Fixed RubyFile#join bug on Windows


Version 1.5.3

* Auto close the InputStream if an EachLineIterator reaches to the end

* RubyIO#foreach can now take no block and return a RubyEnumerator

* RubyEnumerable#collect & RubyEnumerable#map can now take method name

* RubyArray#valuesAt & RubyHash#valuesAt can now take Iterable

* RubyCollections#Hash can now take RubyArray of List


Version 1.6.0

+ Added RubyObject#send

+ Most of the TransformBlocks in RubyCollect4J can now be replaced with method name and arguments (invoke method using Reflection)

+ Refactor code by adding RubyContract::Enumerable & RubyContract::Enumerator interfaces


Version 1.6.1

* Added RubyFile::size & RubyFile::expandPath(file, dir)

* Fixed the remove logic of StepIterator

* Fixed the potential bug of RubyArray#pack

* Defensive copies are made while constructing CombinationIterator, PermutationIterator, RepeatedCombinationIterator, RepeatedPermutationIterator, ProductIterator and ZipIterator

* RubyRnumerable#sortBy & RubyArray#sortBy! are no longer to do the second sorting on the elements which get the same transformed value


Version 1.6.2

+ Added @SafeVarargs annotations

* RubyArray#last(int n) throws IllegalArgumentException if n is < 0

* Reimplemented LinkedIdentityMap

* RubyEnumerable#allʔ, anyʔ, oneʔ do not check Boolean.False anymore

* Fixed the bug of RubyEnumerable#findIndex while finding the index of a null object 

Version 1.6.3

* Avoided file lock by initiating EachLineIterator lazily

Version 1.7.0

+ Added RubyString

+ Added CharacterSuccessor