@@ -58,16 +58,15 @@ public class PackerTest {
   @Test
   public void testPack() {
     assertEquals("a  b  c  ", Packer.pack("A3A3A3", "a", "b", "c"));
-    assertEquals("a\\x00\\x00b\\x00\\x00c\\x00\\x00",
-        Packer.pack("a3a3a3", "a", "b", "c"));
+    assertEquals("a\0\0b\0\0c\0\0", Packer.pack("a3a3a3", "a", "b", "c"));
     assertEquals("ABC", Packer.pack("ccc", 65, 66, 67));
     assertEquals("ABC", Packer.pack("c3", 65, 66, 67));
-    assertEquals("\\x00{", Packer.pack("s>", 123));
-    assertEquals("{\\x00", Packer.pack("s<", 123));
+    assertEquals("\0{", Packer.pack("s>", 123));
+    assertEquals("{\0", Packer.pack("s<", 123));
     assertEquals("a", Packer.pack("A*", "a"));
     assertEquals("ab", Packer.pack("A1A1", "abc", "bc"));
-    assertEquals("a\\x00", Packer.pack("Z*", "a"));
-    assertEquals("a\\x00\\x00", Packer.pack("Z3", "a"));
+    assertEquals("a\0", Packer.pack("Z*", "a"));
+    assertEquals("a\0\0", Packer.pack("Z3", "a"));
   }
 
 }
